--- a/assets/mon-equipe.html
+++ b/assets/mon-equipe.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon équipe</title>
-    <script src="assets/app.js" defer></script>
-    <script src="assets/infoequipe.js" defer></script>
-    <link rel="stylesheet" href="assets/style.css">
+    <script src="app.js" defer></script>
+    <script src="infoequipe.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="navcontainer">
         <nav class="menu">
 
 
-            <a class="menu__logo" href="index.html"><svg class="menu__logo" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="enable-background:new 0 0 400 400" viewBox="0 0 400 400"><style>.st0{fill:#717070}.st1{fill:#3152a0}</style><g id="a"><circle cx="170.3" cy="150.9" r="18.9" class="st0"/><circle cx="170.3" cy="224.7" r="18.9" class="st0"/><circle cx="345.9" cy="150.9" r="19" class="st0"/><path d="M326.9 268.1v-12c9.1-1.1 18.1-5.6 19.5-12.8h-.4c-10.4 0-18.8-8.4-18.8-18.8s8.4-18.8 18.8-18.8 17.5 7.9 18.8 17.6c2.2 13.6-3.6 42.8-37.9 44.8z" class="st0"/><path d="M34.8 212.5h95.4V237H34.8zM210.3 212.5h95.4V237h-95.4z" class="st1"/></g></svg></a>
+            <a class="menu__logo" href="../index.html"><svg xmlns="http://www.w3.org/2000/svg" width="62.3" height="26.075"><g data-name="Groupe 3"><g fill="#707070" data-name="Groupe 1" transform="translate(21.996 .019)"><circle cx="3.568" cy="3.568" r="3.568" data-name="Ellipse 1"/><circle cx="3.568" cy="3.568" r="3.568" data-name="Ellipse 2" transform="translate(0 13.934)"/></g><g fill="#707070" data-name="Groupe 2" transform="translate(55.151)"><circle cx="3.457" cy="3.457" r="3.457" data-name="Ellipse 3" transform="translate(.156)"/><path d="M.3 26.074 0 23.45a4.449 4.449 0 0 0 3.682-2.417h-.094a3.55 3.55 0 1 1 3.55-3.776c.151 2.757-1.114 8.138-6.835 8.817Z" data-name="Tracé 1"/></g><path fill="#2c51a9" d="M0 15.199h18.012v4.626H0z" data-name="Rectangle 27"/><path fill="#2c51a9" d="M33.136 15.199h18.012v4.626H33.136z" data-name="Rectangle 28"/></g></svg></a>
 
             <ul class="menu__liste">
                 <li class="menu__el"><svg class="menu__grille" width="40" height="36"><g data-name="Groupe 33" transform="translate(17959 -2757)"><rect width="12" height="10" fill="#707070" data-name="Rectangle 109" rx="2" transform="translate(-17959 2757)"/><rect width="12" height="11" fill="#707070" data-name="Rectangle 112" rx="2" transform="translate(-17959 2769)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 115" rx="2" transform="translate(-17959 2783)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 110" rx="2" transform="translate(-17945 2757)"/><rect width="26" height="11" fill="#2c51a9" data-name="Rectangle 113" rx="2" transform="translate(-17945 2769)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 116" rx="2" transform="translate(-17945 2783)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 111" rx="2" transform="translate(-17931 2757)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 117" rx="2" transform="translate(-17931 2783)"/></g></svg></li>
@@ -41,9 +41,10 @@
         </nav>
 
     </header>
+    <div class="grille"></div>
     <main class="maincontainer">
 
-        <h2 class="title title--medium">Mon<span>.équipe {</span></h2>
+        <h2 class="title title--medium second">Mon<span>.équipe {</span></h2>
 
             <section class="section__equipier section__equipier--kesily">  
                 <span class="equipier__nom">Kesily</span>
@@ -99,9 +100,9 @@
     <footer class="footercontainer">
 
         <ul class="subNav">
-            <li class="subNav__el"><a href="index.html">Accueil</a></li>
-            <li class="subNav__el"><a href="assets/ui-kit.html">Ui-Kit</a></li>
-            <li class="subNav__el"><a href="assets/video-projet.html">Vidéo du projet</a></li>
+            <li class="subNav__el"><a href="../index.html">Accueil</a></li>
+            <li class="subNav__el"><a href="ui-kit.html">Ui-Kit</a></li>
+            <li class="subNav__el"><a href="video-projet.html">Vidéo du projet</a></li>
         </ul>
 
         <small class="credits"><a href="https://dwt.heaj.be/">DWT</a> - <a href="index.html">Jonathan Lemineur</a>&copy; 2022</small>
