avancement-web-mobile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <h1 class="title title--big">In&nbspAnd&nbspOut Of&nbspStyle</h1>
 
-        <h2 class="title title--medium first">CSS<span>.Day {</span></h2>
+        <h2 class="title title--medium first">CSS<span>.Day&nbsp{</span></h2>
 
             <h3 class="title title--small first">Un&nbspévènement&nbspsmart</h3>
             <div class="title title--underline" id="underline1"></div>
