--- a/assets/mon-equipe.html
+++ b/assets/mon-equipe.html
@@ -22,29 +22,39 @@
                 <li class="menu__el"><svg class="menu__burger" width="40" height="37"><g data-name="Groupe 51"><g fill="#707070" data-name="Groupe 14"><path d="M0 0h40v7H0z" data-name="Rectangle 41"/><path d="M0 15h40v7H0z" data-name="Rectangle 42"/><path d="M0 30h40v7H0z" data-name="Rectangle 43"/></g><g fill="#2c51a9" data-name="Groupe 25"><path d="M0 0h7v7H0z" data-name="Rectangle 41"/><path d="M0 15h7v7H0z" data-name="Rectangle 42"/><path d="M0 30h7v7H0z" data-name="Rectangle 43"/></g></g></svg></li>
             </ul>
             <ul class="bgmenu__nav">
-                <li class="bgmenu__el bgmenu__el--h2"><a href="#">CSS</a><span>.Day {</span></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Un évènement smart</a></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Édition 2022</a></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">La conférence</a></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Une vraie âme d’artiste</a></li>
+                <li class="bgmenu__el bgmenu__el--h2 first"><a href="index.html">CSS</a><span>.Day {</span></li>
+                <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html">Un évènement smart</a></li>
+                <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#edition">Édition 2022</a></li>
+                <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#conference">La conférence</a></li>
+                <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#artiste">Une vraie âme d’artiste</a></li>
+                <span class="bgmenu__el bgmenu__el--h2 fermeture">}</span>
+                <li class="bgmenu__el bgmenu__el--h2"><a href="../index.html#reflexions">Mes</a><span href="#reflexions">.réflexions {</span></li>
+                <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#reflexions">Ma vision des conférences</a></li>
+                <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#ressenti">Mon premier ressenti</a></li>
+                <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#generation">Une nouvelle génération ?</a></li>
+                <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#retenir">Les choses à bien retenir</a></li>
                 <span class="bgmenu__el bgmenu__el--h2">}</span>
-                <li class="bgmenu__el bgmenu__el--h2"><a href="#">Mes</a><span>.réflexions {</span></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Ma vision des conférences</a></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Mon premier ressenti</a></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Une nouvelle génération ?</a></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Les choses à bien retenir</a></li>
-                <span class="bgmenu__el bgmenu__el--h2">}</span>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Vidéo du projet</a></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Mon équipe</a></li>
-                <li class="bgmenu__el bgmenu__el--h3"><a href="#">Ui-Kit</a></li>
+                <li class="bgmenu__el bgmenu__el--h3 lien first"><a href="video-projet.html"> Vidéo du projet</a></li>
+                <li class="bgmenu__el bgmenu__el--h3 lien"><a href="mon-equipe.html"> Mon équipe</a></li>
+                <li class="bgmenu__el bgmenu__el--h3 lien"><a href="ui-kit.html"> Ui-Kit</a></li>
+                <li class="bgmenu__el bgmenu__el--h3 lien"><a href="case-study.html"> Case-study</a></li>
            </ul>
         </nav>
 
     </header>
-    <div class="grille"></div>
-    <main class="maincontainer">
+    <picture class="grille">
+        <source 
+                media="(max-width: 599px)" 
+                srcset="images/grille.png"
+                srcset="images/grille@2x.png 2x">
+        <source 
+                media="(min-width: 600px)" 
+                srcset="images/grille--desktop.png">
+        <img class="grille__image" src="images/grille--desktop.png">
+    </picture>
+    <main class="maincontainer maincontainer__equipe">
 
-        <h2 class="title title--medium second">Mon<span>.équipe {</span></h2>
+        <h2 class="title title--medium second">Mon<span>.équipe&nbsp{</span></h2>
 
             <section class="section__equipier section__equipier--kesily">  
                 <span class="equipier__nom">Kesily</span>
@@ -52,8 +62,8 @@
                     <p class="equipier__description">Kesily Ouattara est un bosseur, accumulant les jobs étudiants et l'HEAJ, il fournissait à l'équipe un QG dans lequel reprendre nos esprits et débattre du projet.</p>
                     <a class="texte__equipeprojet" href="http://www.kesily-ouattara.be/">Projet IOLCE de Kesily</a>
                     <ul class="reseaux">
-                        <li><a href="instadekes.com"><svg class="insta__logo" width="48.046" height="48.049"><defs><clipPath id="a"><path fill="none" d="M0 0h48.046v48.049H0z" data-name="Rectangle 8"/></clipPath></defs><g clip-path="url(#a)" data-name="instagram"><path fill="#FFF" d="M16.018 24.024a8.007 8.007 0 1 1 8.006 8.009 8.007 8.007 0 0 1-8.006-8.009m-4.329 0a12.336 12.336 0 1 0 12.335-12.332 12.336 12.336 0 0 0-12.337 12.332m22.279-12.826a2.884 2.884 0 1 0 2.886-2.881 2.885 2.885 0 0 0-2.884 2.881m-19.651 32.38a13.248 13.248 0 0 1-4.462-.828 7.957 7.957 0 0 1-4.561-4.558 13.253 13.253 0 0 1-.826-4.462c-.116-2.533-.14-3.294-.14-9.708s.026-7.174.14-9.708a13.33 13.33 0 0 1 .828-4.462 7.485 7.485 0 0 1 1.8-2.764 7.407 7.407 0 0 1 2.762-1.8 13.253 13.253 0 0 1 4.462-.826c2.533-.116 3.294-.14 9.708-.14s7.174.026 9.708.14a13.329 13.329 0 0 1 4.462.826 7.435 7.435 0 0 1 2.764 1.8 7.454 7.454 0 0 1 1.8 2.764 13.253 13.253 0 0 1 .826 4.462c.116 2.535.14 3.294.14 9.708s-.023 7.174-.14 9.708a13.329 13.329 0 0 1-.826 4.462 7.955 7.955 0 0 1-4.56 4.56 13.253 13.253 0 0 1-4.462.826c-2.533.116-3.294.14-9.708.14s-7.174-.023-9.708-.14M14.121.147a17.6 17.6 0 0 0-5.833 1.115 11.784 11.784 0 0 0-4.256 2.771 11.764 11.764 0 0 0-2.771 4.259 17.627 17.627 0 0 0-1.115 5.833c-.121 2.561-.147 3.379-.147 9.9s.027 7.343.147 9.9a17.587 17.587 0 0 0 1.115 5.831 12.284 12.284 0 0 0 7.027 7.036 17.665 17.665 0 0 0 5.833 1.115c2.564.116 3.381.147 9.9.147s7.343-.027 9.9-.147a17.627 17.627 0 0 0 5.839-1.115 12.283 12.283 0 0 0 7.027-7.027 17.62 17.62 0 0 0 1.116-5.831c.116-2.564.144-3.381.144-9.9s-.027-7.343-.144-9.9a17.627 17.627 0 0 0-1.115-5.842 11.82 11.82 0 0 0-2.77-4.256 11.784 11.784 0 0 0-4.256-2.771A17.579 17.579 0 0 0 33.931.149C31.367.031 30.55.002 24.025.002S16.68.029 14.12.149"/></g></svg></a></li>
-                        <li><a href="twitterdekes.com"></a><svg class="twitter__logo" width="49.824" height="41.822"><g fill="none" stroke-linejoin="round" stroke-miterlimit="10"><path d="M41.935 12.17c.026.378.026.757.026 1.136 0 11.618-8.845 25.015-25.015 25.015v-.008a24.892 24.892 0 0 1-13.441-3.917.009.009 0 0 1 0-.013.009.009 0 0 1 .01-.005 18.016 18.016 0 0 0 2.05.121 17.655 17.655 0 0 0 10.92-3.771 8.8 8.8 0 0 1-8.214-6.1 8.771 8.771 0 0 0 3.969-.151 8.792 8.792 0 0 1-7.053-8.619v-.112a8.733 8.733 0 0 0 3.991 1.1A8.8 8.8 0 0 1 6.45 5.104a24.955 24.955 0 0 0 18.122 9.185A8.8 8.8 0 0 1 39.554 6.27a17.623 17.623 0 0 0 5.586-2.135 8.83 8.83 0 0 1-3.517 4.644.091.091 0 0 0-.028.126.09.09 0 0 0 .089.04 17.5 17.5 0 0 0 4.639-1.331 17.872 17.872 0 0 1-4.388 4.555Z"/><path fill="#f5f5f5" d="M33.147 3.5a8.8 8.8 0 0 0-8.572 10.79A24.955 24.955 0 0 1 6.452 5.104a8.803 8.803 0 0 0 2.723 11.74 8.733 8.733 0 0 1-3.99-1.1v.112c0 4.185 2.95 7.79 7.052 8.618a8.771 8.771 0 0 1-3.97.151 8.805 8.805 0 0 0 8.214 6.105 17.657 17.657 0 0 1-12.97 3.65c-.003-.001-.007.001-.01.005-.002.004-.001.01.004.013a24.898 24.898 0 0 0 13.441 3.916v.008c16.17 0 25.015-13.398 25.015-25.015 0-.38 0-.758-.026-1.137h.001a17.871 17.871 0 0 0 4.388-4.555 17.495 17.495 0 0 1-4.64 1.331.09.09 0 0 1-.088-.04.091.091 0 0 1 .027-.125 8.83 8.83 0 0 0 3.517-4.645 17.623 17.623 0 0 1-5.583 2.134 8.803 8.803 0 0 0-6.41-2.77m0-3.5c2.646 0 5.223.866 7.329 2.424a14.073 14.073 0 0 0 2.878-1.297 3.5 3.5 0 0 1 5.198 3.789 3.504 3.504 0 0 1 .683 4.643 21.298 21.298 0 0 1-3.779 4.285c-.134 6.736-2.782 13.502-7.313 18.641-2.54 2.883-5.567 5.15-8.995 6.738-3.723 1.724-7.828 2.599-12.202 2.599-.08 0-.161-.003-.241-.009a28.343 28.343 0 0 1-15.069-4.456 3.51 3.51 0 0 1 2.298-6.451c.54.062 1.089.094 1.634.095h.006c.848 0 1.692-.078 2.521-.229a12.28 12.28 0 0 1-3.16-5.075 3.498 3.498 0 0 1-.12-1.646 12.325 12.325 0 0 1-3.13-8.195v-.112a3.5 3.5 0 0 1 .76-2.178 12.415 12.415 0 0 1-.365-1.263 12.26 12.26 0 0 1 1.346-8.956 3.5 3.5 0 0 1 5.743-.45 21.488 21.488 0 0 0 11.84 7.376c.261-1.57.832-3.088 1.7-4.48A12.219 12.219 0 0 1 30.365.319C31.276.107 32.212 0 33.146 0Z"/></g></svg></a></li>
+                        <li><a href="instadekes.com"><svg class="insta__logo" ><defs><clipPath id="a"><path fill="none" d="M0 0h48.046v48.049H0z" data-name="Rectangle 8"/></clipPath></defs><g clip-path="url(#a)" data-name="instagram"><path fill="#FFF" d="M16.018 24.024a8.007 8.007 0 1 1 8.006 8.009 8.007 8.007 0 0 1-8.006-8.009m-4.329 0a12.336 12.336 0 1 0 12.335-12.332 12.336 12.336 0 0 0-12.337 12.332m22.279-12.826a2.884 2.884 0 1 0 2.886-2.881 2.885 2.885 0 0 0-2.884 2.881m-19.651 32.38a13.248 13.248 0 0 1-4.462-.828 7.957 7.957 0 0 1-4.561-4.558 13.253 13.253 0 0 1-.826-4.462c-.116-2.533-.14-3.294-.14-9.708s.026-7.174.14-9.708a13.33 13.33 0 0 1 .828-4.462 7.485 7.485 0 0 1 1.8-2.764 7.407 7.407 0 0 1 2.762-1.8 13.253 13.253 0 0 1 4.462-.826c2.533-.116 3.294-.14 9.708-.14s7.174.026 9.708.14a13.329 13.329 0 0 1 4.462.826 7.435 7.435 0 0 1 2.764 1.8 7.454 7.454 0 0 1 1.8 2.764 13.253 13.253 0 0 1 .826 4.462c.116 2.535.14 3.294.14 9.708s-.023 7.174-.14 9.708a13.329 13.329 0 0 1-.826 4.462 7.955 7.955 0 0 1-4.56 4.56 13.253 13.253 0 0 1-4.462.826c-2.533.116-3.294.14-9.708.14s-7.174-.023-9.708-.14M14.121.147a17.6 17.6 0 0 0-5.833 1.115 11.784 11.784 0 0 0-4.256 2.771 11.764 11.764 0 0 0-2.771 4.259 17.627 17.627 0 0 0-1.115 5.833c-.121 2.561-.147 3.379-.147 9.9s.027 7.343.147 9.9a17.587 17.587 0 0 0 1.115 5.831 12.284 12.284 0 0 0 7.027 7.036 17.665 17.665 0 0 0 5.833 1.115c2.564.116 3.381.147 9.9.147s7.343-.027 9.9-.147a17.627 17.627 0 0 0 5.839-1.115 12.283 12.283 0 0 0 7.027-7.027 17.62 17.62 0 0 0 1.116-5.831c.116-2.564.144-3.381.144-9.9s-.027-7.343-.144-9.9a17.627 17.627 0 0 0-1.115-5.842 11.82 11.82 0 0 0-2.77-4.256 11.784 11.784 0 0 0-4.256-2.771A17.579 17.579 0 0 0 33.931.149C31.367.031 30.55.002 24.025.002S16.68.029 14.12.149"/></g></svg></a></li>
+                        <li><a href="twitterdekes.com"></a><svg class="twitter__logo"><g fill="none" stroke-linejoin="round" stroke-miterlimit="10"><path d="M41.935 12.17c.026.378.026.757.026 1.136 0 11.618-8.845 25.015-25.015 25.015v-.008a24.892 24.892 0 0 1-13.441-3.917.009.009 0 0 1 0-.013.009.009 0 0 1 .01-.005 18.016 18.016 0 0 0 2.05.121 17.655 17.655 0 0 0 10.92-3.771 8.8 8.8 0 0 1-8.214-6.1 8.771 8.771 0 0 0 3.969-.151 8.792 8.792 0 0 1-7.053-8.619v-.112a8.733 8.733 0 0 0 3.991 1.1A8.8 8.8 0 0 1 6.45 5.104a24.955 24.955 0 0 0 18.122 9.185A8.8 8.8 0 0 1 39.554 6.27a17.623 17.623 0 0 0 5.586-2.135 8.83 8.83 0 0 1-3.517 4.644.091.091 0 0 0-.028.126.09.09 0 0 0 .089.04 17.5 17.5 0 0 0 4.639-1.331 17.872 17.872 0 0 1-4.388 4.555Z"/><path fill="#f5f5f5" d="M33.147 3.5a8.8 8.8 0 0 0-8.572 10.79A24.955 24.955 0 0 1 6.452 5.104a8.803 8.803 0 0 0 2.723 11.74 8.733 8.733 0 0 1-3.99-1.1v.112c0 4.185 2.95 7.79 7.052 8.618a8.771 8.771 0 0 1-3.97.151 8.805 8.805 0 0 0 8.214 6.105 17.657 17.657 0 0 1-12.97 3.65c-.003-.001-.007.001-.01.005-.002.004-.001.01.004.013a24.898 24.898 0 0 0 13.441 3.916v.008c16.17 0 25.015-13.398 25.015-25.015 0-.38 0-.758-.026-1.137h.001a17.871 17.871 0 0 0 4.388-4.555 17.495 17.495 0 0 1-4.64 1.331.09.09 0 0 1-.088-.04.091.091 0 0 1 .027-.125 8.83 8.83 0 0 0 3.517-4.645 17.623 17.623 0 0 1-5.583 2.134 8.803 8.803 0 0 0-6.41-2.77m0-3.5c2.646 0 5.223.866 7.329 2.424a14.073 14.073 0 0 0 2.878-1.297 3.5 3.5 0 0 1 5.198 3.789 3.504 3.504 0 0 1 .683 4.643 21.298 21.298 0 0 1-3.779 4.285c-.134 6.736-2.782 13.502-7.313 18.641-2.54 2.883-5.567 5.15-8.995 6.738-3.723 1.724-7.828 2.599-12.202 2.599-.08 0-.161-.003-.241-.009a28.343 28.343 0 0 1-15.069-4.456 3.51 3.51 0 0 1 2.298-6.451c.54.062 1.089.094 1.634.095h.006c.848 0 1.692-.078 2.521-.229a12.28 12.28 0 0 1-3.16-5.075 3.498 3.498 0 0 1-.12-1.646 12.325 12.325 0 0 1-3.13-8.195v-.112a3.5 3.5 0 0 1 .76-2.178 12.415 12.415 0 0 1-.365-1.263 12.26 12.26 0 0 1 1.346-8.956 3.5 3.5 0 0 1 5.743-.45 21.488 21.488 0 0 0 11.84 7.376c.261-1.57.832-3.088 1.7-4.48A12.219 12.219 0 0 1 30.365.319C31.276.107 32.212 0 33.146 0Z"/></g></svg></a></li>
                     </ul>  
                 </section>
             </section>
@@ -105,7 +115,7 @@
             <li class="subNav__el"><a href="video-projet.html">Vidéo du projet</a></li>
         </ul>
 
-        <small class="credits"><a href="https://dwt.heaj.be/">DWT</a> - <a href="index.html">Jonathan Lemineur</a>&copy; 2022</small>
+        <small class="credits"><a href="https://dwt.heaj.be/"><svg id="a" viewBox="0 0 375 130.65"><defs></defs><path id="b" d="M0 0h29c7.16-.09 14.28.96 21.11 3.11a41.63 41.63 0 0 1 16.19 9.57 43.184 43.184 0 0 1 10.39 16.44c2.45 6.67 3.68 14.57 3.68 23.72s-1.23 17.11-3.68 23.88a45.084 45.084 0 0 1-10.31 16.77 42.046 42.046 0 0 1-15.78 9.9 59.834 59.834 0 0 1-20.29 3.27H0V0Zm27.65 87.19c3.86.05 7.7-.56 11.36-1.8a21.25 21.25 0 0 0 8.84-5.81c2.66-3.05 4.62-6.65 5.72-10.55a54.65 54.65 0 0 0 2.05-16.19c.13-5.39-.56-10.77-2.05-15.95a25.953 25.953 0 0 0-5.72-10.34 20.762 20.762 0 0 0-8.84-5.48 37.667 37.667 0 0 0-11.36-1.63h-3.44v67.72l3.44.03Z" class="g"/><path id="c" d="M88.17 0h24.54l3.43 56.76c.11 4.58.22 9.11.33 13.58s.22 9 .33 13.58h.49c.87-4.58 1.83-9.11 2.86-13.58 1.03-4.47 1.99-9 2.86-13.58l7.36-29.6h14.56l7 29.6c.87 4.37 1.8 8.84 2.78 13.42s1.91 9.16 2.79 13.74h.65c.22-4.58.36-9.13.41-13.66.05-4.53.19-9.03.41-13.5L162.08 0h22.9l-13.22 106.66h-25.19l-6.71-33.54c-.67-3.38-1.27-6.84-1.8-10.38-.55-3.55-.93-6.9-1.14-10.07h-.49c-.33 3.17-.74 6.52-1.23 10.07-.49 3.55-1.06 7-1.72 10.38l-6.38 33.54h-24.7L88.17 0Z" class="g"/><path id="d" d="M222.63 20.29h-31.9V0h88v20.29h-31.9v86.37h-24.2V20.29Z" class="g"/><path id="e" d="M302.3 106.66H375v23.99h-72.7z"/></svg></a> <a href="index.html">&copy; Jonathan Lemineur 2022</a></small>
 
     </footer>
 </body>
