--- a/assets/case-study.html
+++ b/assets/case-study.html
@@ -7,38 +7,39 @@
     <title>Case-study</title>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/IOLCE_LOGO_icon.svg">
+
 </head>
-<body>
+<body class="dark">
     <header class="navcontainer">
-    <nav class="menu">
+        <nav class="menu">
 
 
-        <a class="menu__logo" href="../index.html"><svg xmlns="http://www.w3.org/2000/svg" width="62.3" height="26.075"><g data-name="Groupe 3"><g fill="#707070" data-name="Groupe 1" transform="translate(21.996 .019)"><circle cx="3.568" cy="3.568" r="3.568" data-name="Ellipse 1"/><circle cx="3.568" cy="3.568" r="3.568" data-name="Ellipse 2" transform="translate(0 13.934)"/></g><g fill="#707070" data-name="Groupe 2" transform="translate(55.151)"><circle cx="3.457" cy="3.457" r="3.457" data-name="Ellipse 3" transform="translate(.156)"/><path d="M.3 26.074 0 23.45a4.449 4.449 0 0 0 3.682-2.417h-.094a3.55 3.55 0 1 1 3.55-3.776c.151 2.757-1.114 8.138-6.835 8.817Z" data-name="Tracé 1"/></g><path fill="#2c51a9" d="M0 15.199h18.012v4.626H0z" data-name="Rectangle 27"/><path fill="#2c51a9" d="M33.136 15.199h18.012v4.626H33.136z" data-name="Rectangle 28"/></g></svg></a>
-
-        <ul class="menu__liste">
-            <li class="menu__el"><svg class="menu__grille" width="40" height="36"><g data-name="Groupe 33" transform="translate(17959 -2757)"><rect width="12" height="10" fill="#707070" data-name="Rectangle 109" rx="2" transform="translate(-17959 2757)"/><rect width="12" height="11" fill="#707070" data-name="Rectangle 112" rx="2" transform="translate(-17959 2769)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 115" rx="2" transform="translate(-17959 2783)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 110" rx="2" transform="translate(-17945 2757)"/><rect width="26" height="11" fill="#2c51a9" data-name="Rectangle 113" rx="2" transform="translate(-17945 2769)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 116" rx="2" transform="translate(-17945 2783)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 111" rx="2" transform="translate(-17931 2757)"/><rect width="12" height="10" fill="#707070" data-name="Rectangle 117" rx="2" transform="translate(-17931 2783)"/></g></svg></li>
-            <li class="menu__el"><svg width="16.539" height="39.281"><g data-name="Groupe 23"><g fill="#2c51a9" data-name="Tracé 9"><path d="M.5 31.012V8.27C.5 3.985 3.985.5 8.27.5c4.284 0 7.769 3.485 7.769 7.77v22.742c0 4.284-3.485 7.77-7.77 7.77-4.284 0-7.77-3.486-7.77-7.77Z"/><path d="M15.539 8.27c0-4.009-3.261-7.27-7.27-7.27C4.261 1 1 4.261 1 8.27v22.742c0 4.008 3.262 7.27 7.27 7.27 4.009 0 7.27-3.262 7.27-7.27V8.27m1 0v22.742a8.27 8.27 0 0 1-16.54 0V8.27a8.27 8.27 0 0 1 16.54 0Z"/></g><g fill="#fff" data-name="Tracé 10"><path d="M1 8.27C1 4.26 4.26 1 8.27 1c4.008 0 7.269 3.261 7.269 7.27 0 4.008-3.261 7.27-7.27 7.27C4.261 15.54 1 12.277 1 8.27Z"/><path fill="#2e53a7" d="M14.539 8.27A6.277 6.277 0 0 0 8.269 2 6.277 6.277 0 0 0 2 8.27a6.277 6.277 0 0 0 6.27 6.27 6.277 6.277 0 0 0 6.27-6.27m2 0a8.27 8.27 0 1 1-16.54 0 8.27 8.27 0 0 1 16.54 0Z"/></g></g></svg></li>
-            <li class="menu__el"><svg class="menu__burger" width="40" height="37"><g data-name="Groupe 51"><g fill="#707070" data-name="Groupe 14"><path d="M0 0h40v7H0z" data-name="Rectangle 41"/><path d="M0 15h40v7H0z" data-name="Rectangle 42"/><path d="M0 30h40v7H0z" data-name="Rectangle 43"/></g><g fill="#2c51a9" data-name="Groupe 25"><path d="M0 0h7v7H0z" data-name="Rectangle 41"/><path d="M0 15h7v7H0z" data-name="Rectangle 42"/><path d="M0 30h7v7H0z" data-name="Rectangle 43"/></g></g></svg></li>
-        </ul>
-        <ul class="bgmenu__nav">
-            <li class="bgmenu__el bgmenu__el--h2 first"><a href="index.html">CSS</a><span>.Day {</span></li>
-            <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html">Un évènement smart</a></li>
-            <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#edition">Édition 2022</a></li>
-            <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#conference">La conférence</a></li>
-            <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#artiste">Une vraie âme d’artiste</a></li>
-            <span class="bgmenu__el bgmenu__el--h2 fermeture">}</span>
-            <li class="bgmenu__el bgmenu__el--h2"><a href="../index.html#reflexions">Mes</a><span href="#reflexions">.réflexions {</span></li>
-            <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#reflexions">Ma vision des conférences</a></li>
-            <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#ressenti">Mon premier ressenti</a></li>
-            <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#generation">Une nouvelle génération ?</a></li>
-            <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#retenir">Les choses à bien retenir</a></li>
-            <span class="bgmenu__el bgmenu__el--h2">}</span>
-            <li class="bgmenu__el bgmenu__el--h3 lien first"><a href="assets/video-projet.html"> Vidéo du projet</a></li>
-            <li class="bgmenu__el bgmenu__el--h3 lien"><a href="assets/mon-equipe.html"> Mon équipe</a></li>
-            <li class="bgmenu__el bgmenu__el--h3 lien"><a href="assets/ui-kit.html"> Ui-Kit</a></li>
-            <li class="bgmenu__el bgmenu__el--h3 lien"><a href="assets/case-study.html"> Case-study</a></li>
-       </ul>
-    </nav>
+            <a class="menu__logo" href="../index.html"><svg xmlns="http://www.w3.org/2000/svg" width="62.3" height="26.075"><g class="gris" data-name="Groupe 3"><g data-name="Groupe 1" transform="translate(21.996 .019)"><circle cx="3.568" cy="3.568" r="3.568" data-name="Ellipse 1"/><circle cx="3.568" cy="3.568" r="3.568" data-name="Ellipse 2" transform="translate(0 13.934)"/></g><g class="gris" data-name="Groupe 2" transform="translate(55.151)"><circle cx="3.457" cy="3.457" r="3.457" data-name="Ellipse 3" transform="translate(.156)"/><path d="M.3 26.074 0 23.45a4.449 4.449 0 0 0 3.682-2.417h-.094a3.55 3.55 0 1 1 3.55-3.776c.151 2.757-1.114 8.138-6.835 8.817Z" data-name="Tracé 1"/></g><path class="bleu" d="M0 15.199h18.012v4.626H0z" data-name="Rectangle 27"/><path class="bleu" d="M33.136 15.199h18.012v4.626H33.136z" data-name="Rectangle 28"/></g></svg></a>
+                <ul class="menu__liste">
+                    <li class="menu__el"><svg class="menu__grille" width="40" height="36"><g data-name="Groupe 33" transform="translate(17959 -2757)"><rect width="12" height="10" class="gris" data-name="Rectangle 109" rx="2" transform="translate(-17959 2757)"/><rect width="12" height="11" class="gris" data-name="Rectangle 112" rx="2" transform="translate(-17959 2769)"/><rect width="12" height="10" class="gris" data-name="Rectangle 115" rx="2" transform="translate(-17959 2783)"/><rect width="12" height="10" class="gris" data-name="Rectangle 110" rx="2" transform="translate(-17945 2757)"/><rect width="26" height="11" class="bleu" data-name="Rectangle 113" rx="2" transform="translate(-17945 2769)"/><rect width="12" height="10" class="gris" data-name="Rectangle 116" rx="2" transform="translate(-17945 2783)"/><rect width="12" height="10" class="gris" data-name="Rectangle 111" rx="2" transform="translate(-17931 2757)"/><rect width="12" height="10" class="gris" data-name="Rectangle 117" rx="2" transform="translate(-17931 2783)"/></g></svg></li>
+                    <li class="menu__el"><svg class="darkboutton" width="16.539" height="39.281"><g data-name="Groupe 23"><g class="bleu" data-name="Tracé 9"><path d="M.5 31.012V8.27C.5 3.985 3.985.5 8.27.5c4.284 0 7.769 3.485 7.769 7.77v22.742c0 4.284-3.485 7.77-7.77 7.77-4.284 0-7.77-3.486-7.77-7.77Z"/><path d="M15.539 8.27c0-4.009-3.261-7.27-7.27-7.27C4.261 1 1 4.261 1 8.27v22.742c0 4.008 3.262 7.27 7.27 7.27 4.009 0 7.27-3.262 7.27-7.27V8.27m1 0v22.742a8.27 8.27 0 0 1-16.54 0V8.27a8.27 8.27 0 0 1 16.54 0Z"/></g><g class="darkbout" fill="#fff" data-name="Tracé 10"><path d="M1 8.27C1 4.26 4.26 1 8.27 1c4.008 0 7.269 3.261 7.269 7.27 0 4.008-3.261 7.27-7.27 7.27C4.261 15.54 1 12.277 1 8.27Z"/><path fill="#2e53a7" d="M14.539 8.27A6.277 6.277 0 0 0 8.269 2 6.277 6.277 0 0 0 2 8.27a6.277 6.277 0 0 0 6.27 6.27 6.277 6.277 0 0 0 6.27-6.27m2 0a8.27 8.27 0 1 1-16.54 0 8.27 8.27 0 0 1 16.54 0Z"/></g></g></svg></li>
+                    <li class="menu__el"><svg class="menu__burger" width="40" height="37"><g data-name="Groupe 51"><g class="gris" data-name="Groupe 14"><path d="M0 0h40v7H0z" data-name="Rectangle 41"/><path d="M0 15h40v7H0z" data-name="Rectangle 42"/><path d="M0 30h40v7H0z" data-name="Rectangle 43"/></g><g class="bleu" data-name="Groupe 25"><path d="M0 0h7v7H0z" data-name="Rectangle 41"/><path d="M0 15h7v7H0z" data-name="Rectangle 42"/><path d="M0 30h7v7H0z" data-name="Rectangle 43"/></g></g></svg></li>
+                </ul>
+                <ul class="bgmenu__nav">
+                    <li class="bgmenu__el bgmenu__el--h2 first"><a href="../index.html">CSS</a><span>.Day {</span></li>
+                    <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html">Un évènement smart</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#edition">Édition 2022</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#conference">La conférence</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#artiste">Une vraie âme d’artiste</a></li>
+                    <span class="bgmenu__el bgmenu__el--h2 fermeture">}</span>
+                    <li class="bgmenu__el bgmenu__el--h2"><a href="../index.html#reflexions">Mes</a><span href="#reflexions">.réflexions {</span></li>
+                    <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#reflexions">Ma vision des conférences</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#ressenti">Mon premier ressenti</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#generation">Une nouvelle génération ?</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3"><a href="../index.html#retenir">Les choses à bien retenir</a></li>
+                    <span class="bgmenu__el bgmenu__el--h2">}</span>
+                    <li class="bgmenu__el bgmenu__el--h3 lien first"><a href="video-projet.html"> Vidéo du projet</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3 lien"><a href="mon-equipe.html"> Mon équipe</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3 lien"><a href="ui-kit.html"> Ui-Kit</a></li>
+                    <li class="bgmenu__el bgmenu__el--h3 lien"><a href="case-study.html"> Case-study</a></li>
+               </ul>
+            </nav>
 
     </header>
 
